se actualiza proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-black">
+  <nav class="navbar navbar-expand-lg bg-withe">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">colomvo studio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="./playlist.html">Playlist</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.instagram.com/colomvo.studio">Instagram</a>
@@ -39,7 +39,7 @@
               Menú
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./quiensoy.html">Quién soy</a></li>
+              <li><a class="dropdown-item" href="./sobremi.html">Sobre Mí</a></li>
               <li><a class="dropdown-item" href="./portfolio.html">Portfolio</a></li>
               <li>
                 <hr class="dropdown-divider">
@@ -59,24 +59,16 @@
     </div>
   </nav>
 
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./fotos/2.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item active">
-        <img src="./fotos/4.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item active">
-        <img src="./fotos/6.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item active">
-        <img src="./fotos/8.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-
-
-
+  <div class="resolucion">
+    <div class="pc">
+    <video loop="true" muted autoplay style="width:100%;">
+      <source src="./fotos/colomvoskyvideo.mp4" type="video/mp4">
+   </div>
+   <div class="movil">
+    <video loop="true" muted autoplay style="width:100%;">
+      <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
+   </div>
+  </div>
 
 
 </body>
