--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <source src="./fotos/colomvoskyvideo.mp4" type="video/mp4">
    </div>
    <div class="movil">
-    <video loop="true" muted autoplay style="width:100%;">
+    <video loop muted autoplay style="width:100%;">
       <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
    </div>
   </div>
