--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
   <div class="resolucion">
     <div class="pc">
-    <video loop="true" muted autoplay style="width:100%;">
+    <video loop="true" muted autoplay playsinline style="width:100%;">
       <source src="./fotos/colomvoskyvideo.mp4" type="video/mp4">
    </div>
    <div class="movil">
-    <video loop="true" muted autoplay style="width:100%;">
+    <video loop="true" muted autoplay playsinline style="width:100%;">
       <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
    </div>
   </div>
