--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Contacto</a></li>
+              <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -61,13 +61,13 @@
 
   <div class="resolucion">
     <div class="pc">
-    <video loop="true" muted autoplay style="width:100%;">
-      <source src="./fotos/colomvoskyvideo.mp4" type="video/mp4">
-   </div>
-   <div class="movil">
-    <video loop="true" muted autoplay style="width:100%;">
-      <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
-   </div>
+      <video loop="true" muted autoplay playsinline style="width:100%;">
+        <source src="./fotos/colomvoskyvideo3.mp4" type="video/mp4">
+    </div>
+    <div class="movil">
+      <video loop="true" muted autoplay playsinline style="width:100%;">
+        <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
+    </div>
   </div>
 
 
