--- a/playlist.html
+++ b/playlist.html
@@ -44,7 +44,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Contacto</a></li>
+              <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             </ul>
           </li>
           <li class="nav-item">
