--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="estilos.scss">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./playlist.html">Playlist</a>
+            <a class="nav-link active" aria-current="page" href="./sobremi.html">Sobre Mí</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.instagram.com/colomvo.studio">Instagram</a>
+            <a class="nav-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -39,16 +39,13 @@
               Menú
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="./sobremi.html">Sobre Mí</a></li>
-              <li><a class="dropdown-item" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="dropdown-item" href="./playlist.html">Playlist</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://www.instagram.com/colomvo.studio">Instagram</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
               <li><a class="dropdown-item" href="./contacto.html">Contacto</a></li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
