--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Este es el sitio web de mi studio de diseño gráfico digital en el que encontrarás info, imágenes, trabajos, música y mucho más">
-  <meta name="keywords" content="meta keywors tag: design, diseño, art, arte, web, estilo, style, argentina, diseño grafico, graphic design, instamedia, redes sociales, social media, web developer">
+  <meta name="keywords" content="design, diseño, art, arte, web, estilo, style, argentina, diseño grafico, graphic design, instamedia, portfolio, fotos, adobe illustrator, adobe, photoshop, vectores, vector">
   <link rel="stylesheet" href="style.css">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -65,7 +65,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p1.png" alt="Cookies Veganas"> </a>
+            <img width="300" height="169" src="./fotos/p1.png" alt="diseño de logo cookies veganas"> </a>
 
         </div>
 
@@ -78,7 +78,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p2.png" alt="london"> </a>
+            <img width="300" height="169" src="./fotos/p2.png" alt="diseño de etiqueta"> </a>
 
         </div>
 
@@ -91,7 +91,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p3.png" alt="new york"> </a>
+            <img width="300" height="169" src="./fotos/p3.png" alt="branding para los laureles"> </a>
 
         </div>
 
@@ -104,7 +104,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p4.png" alt="cape town"> </a>
+            <img width="300" height="169" src="./fotos/p4.png" alt="diseño para tarjetas personales"> </a>
 
         </div>
 
@@ -117,7 +117,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p5.png" alt="beijing"> </a>
+            <img width="300" height="169" src="./fotos/p5.png" alt="branding para marca de cerveza"> </a>
 
         </div>
 
@@ -130,7 +130,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p6.png" alt="mermelada">
+            <img width="300" height="169" src="./fotos/p6.png" alt="disñeo integral para mermelada">
           </a>
         </div>
 
@@ -145,7 +145,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p7.png" alt="due">
+            <img width="300" height="169" src="./fotos/p7.png" alt="disñeo integral para estudio juridico">
           </a>
         </div>
 
@@ -158,7 +158,7 @@
 
         <div class="location-image">
           <a href="#">
-            <img width="300" height="169" src="./fotos/p8.png" alt="go">
+            <img width="300" height="169" src="./fotos/p8.png" alt="diseño de logo para taller cultural">
           </a>
         </div>
 
