--- a/sobremi.html
+++ b/sobremi.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Este es el sitio web de mi studio de diseño gráfico digital en el que encontrarás info, imágenes, trabajos, música y mucho más">
-  <meta name="keywords" content="meta keywors tag: design, diseño, art, arte, web, estilo, style, argentina, diseño grafico, graphic design, instamedia, redes sociales, social media, web developer">
+  <meta name="keywords" content="perfil, info, informacion, dato, datos, design, diseño, art, arte, web, estilo, style, argentina, diseño grafico, graphic design, instamedia, redes sociales, social media, web developer">
   <link rel="stylesheet" href="style.css">
   <link
     href="https://fonts.googleapis.com/css2? family=Bigshot+One&family=DM+Sans&family=League+Spartan:wght@100;800;900&display=swap"
