--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   <div class="resolucion">
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
-        <source src="./fotos/colomvoskyvideo.mp4" type="video/mp4">
+        <source src="./fotos/videoinicio.mp4" type="video/mp4">
     </div>
     <div class="movil">
       <video loop="true" muted autoplay playsinline style="width:100%;">
-        <source src="./fotos/colomvoskyvideomobile.mp4" type="video/mp4">
+        <source src="./fotos/videomovil1.mov" type="video/mp4">
     </div>
   </div>
 
