--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
   </nav>
 
   <div class="resolucion">
+    <div class="packs">
+      <img src="./fotos/promopacksbanner.png" width="100%" alt="">
+    </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
         <source src="./fotos/videoinicio.mp4" type="video/mp4">
