--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   </nav>
 
   <div class="resolucion">
-    <div class="packs">
-      <img src="./fotos/promopacksbanner.png" width="100%" alt="">
+    <div width="100%" class="packs">
+      <img src="./fotos/promopacksbanner.png" alt="">
     </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
