--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-withe">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">colomvo studio</a>
+      <a class="navbar-brand" href="#">
+        <img src="./fotos/logobar.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -64,7 +66,7 @@
 
   <div class="resolucion">
     <div width="100%" class="packs">
-      <img src="./fotos/promopacksbanner.png" alt="">
+      <img src="./fotos/promopacksbanner2.png" alt="">
     </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
@@ -72,7 +74,7 @@
     </div>
     <div class="movil">
       <video loop="true" muted autoplay playsinline style="width:100%;">
-        <source src="./fotos/videoindexmovil.mov" type="video/mp4">
+        <source src="./fotos/videomovil.mp4" type="video/mp4">
     </div>
   </div>
 
