--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="movil">
       <video loop="true" muted autoplay playsinline style="width:100%;">
         <source src="./fotos/videomovil.mp4" type="video/mp4">
+        </video>
     </div>
   </div>
 
