--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="resolucion">
     <div width="100%" class="packs">
-      <img src="./fotos/promopacksbanner2.png" alt="">
+      <img class="pack" src="./fotos/promopacksbanner2.png" alt="">
     </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
@@ -74,7 +74,7 @@
     </div>
     <div class="movil">
       <video loop="true" muted autoplay playsinline style="width:100%;">
-        <source src="./fotos/videomovil.mp4" type="video/mp4">
+        <source src="./fotos/videoindexmovil.mov" type="video/mp4">
     </div>
   </div>
 
