--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <div class="resolucion">
     <div width="100%" class="packs">
-      <img class="pack" src="./fotos/promopacksbanner2.png" alt="">
+      <img src="./fotos/promopacksbanner2.png" alt="">
     </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline style="width:100%;">
