--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <title>colomvo studio | home</title>
+  <title>colomvo studio</title>
   <link rel="icon" type="image/x-icon" href="./fotos/coico.ico" />
 </head>
 
@@ -22,7 +22,7 @@
   <nav class="navbar navbar-expand-lg bg-withe">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="./fotos/logobar.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="./fotos/logobar.png" alt="" width="100%" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,11 +69,11 @@
       <img src="./fotos/promopacksbanner2.png" alt="">
     </div>
     <div class="pc">
-      <video loop="true" muted autoplay playsinline style="width:100%;">
+      <video loop="true" muted autoplay playsinline width="100%">
         <source src="./fotos/videoinicio.mp4" type="video/mp4">
     </div>
     <div class="movil">
-      <video loop="true" muted autoplay playsinline style="width:100%;">
+      <video loop="true" muted autoplay playsinline width="100%">
         <source src="./fotos/videoindexmovil.mov" type="video/mp4">
     </div>
   </div>
@@ -81,7 +81,7 @@
 
 </body>
 
-<footer>
+<footer class="footerindex">
   <div>copyright 2022 | diseñado y codeado por colomvo studio</div>
 </footer>
 <!-- JavaScript Bundle with Popper -->
