--- a/playlist.html
+++ b/playlist.html
@@ -23,7 +23,9 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-withe">
     <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">colomvo studio</a>
+      <a class="navbar-brand" href="./index.html">
+        <img src="./fotos/logobar.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
