--- a/contacto.html
+++ b/contacto.html
@@ -61,11 +61,7 @@
   </nav>
 
   <div class="fondocontacto">
-    <div>
-      <p class="textocontacto">
-        Ponte en contacto!, envíame un mensaje con tu consulta y a la brevedad será respondido.
-      </p>
-    </div>
+    <img src="./fotos/contactame.png" width="100%" alt="">
 
     <main>
       <section>
