--- a/index.html
+++ b/index.html
@@ -66,15 +66,22 @@
 
   <div class="resolucion">
     <div width="100%" class="packs">
+      <a href="./promopacks.html">
       <img src="./fotos/promopacksbanner2.png" alt="">
+      </a>
     </div>
     <div class="pc">
       <video loop="true" muted autoplay playsinline width="100%">
-        <source src="./fotos/videoinicio.mp4" type="video/mp4">
+        <source src="./fotos/videoinicio1.mp4" type="video/mp4">
     </div>
     <div class="movil">
       <video loop="true" muted autoplay playsinline width="100%">
-        <source src="./fotos/videoindexmovil.mov" type="video/mp4">
+        <source src="./fotos/videoindexmovil1.MOV" type="video/mp4">
+    </div>
+    <div width="100%" class="packsmovil">
+      <a href="./promopacks.html">
+      <img src="./fotos/promopacksmovil.png" alt="">
+      </a>
     </div>
   </div>
 
