--- a/servicios.html
+++ b/servicios.html
@@ -70,8 +70,8 @@
                 </div>
             </div>
             <!-- Call to Action-->
-            <div class="card text-white bg-secondary my-5 py-4 text-center">
-                <div class="card-body"><p class="text-white m-0">Servicios que ofrezco como estudio de arte gráfico digital y web</p></div>
+            <div class="card text-black my-5 py-4 text-center">
+                <div class="card-body"><p class="text-#1A4AFA m-0">Servicios que ofrezco como estudio de arte gráfico digital y web</p></div>
             </div>
             <!-- Content Row-->
             <div class="row gx-4 gx-lg-5">
